--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "browser-sync": "^2.18.13",
     "del": "^3.0.0",
     "gulp": "3.9.x",
+    "gulp-cheerio": "^0.6.2",
     "gulp-csso": "^3.0.0",
     "gulp-imagemin": "^3.4.0",
     "gulp-js-minify": "0.0.3",
